[gd_scene load_steps=15 format=3 uid="uid://oqtxuh6lfavi"]

[ext_resource type="Texture2D" uid="uid://d2mo23t2gbb52" path="res://Assets/Sprites/MainMenu/Title1.png" id="1_ggqlj"]
[ext_resource type="PackedScene" uid="uid://cbe1ttdb8mw80" path="res://Scenes/Stream/startVideo.tscn" id="1_gvy58"]
[ext_resource type="Script" path="res://Scripts/mainMenu.gd" id="1_txtt8"]
[ext_resource type="Texture2D" uid="uid://cn65hxca57jml" path="res://Assets/Sprites/MainMenu/Title2.png" id="2_5038a"]
[ext_resource type="Texture2D" uid="uid://coq1gsyd2r3ja" path="res://Assets/Sprites/MainMenu/Title3.png" id="3_g8fk8"]
[ext_resource type="Theme" uid="uid://bciinuu1msc6n" path="res://Assets/Themes/MainMenuUI.tres" id="4_jced4"]
[ext_resource type="PackedScene" uid="uid://c0wmscy44obgl" path="res://Scenes/options_menu.tscn" id="7_gsslm"]
[ext_resource type="Script" path="res://Scripts/menu_music.gd" id="8_jcyxb"]
[ext_resource type="PackedScene" uid="uid://cuyd1qv0pn26e" path="res://addons/midi/MidiPlayer.tscn" id="9_ngp34"]
[ext_resource type="Script" path="res://Scripts/Stream/backingTrackPlayer.gd" id="10_ng7j5"]
[ext_resource type="PackedScene" uid="uid://bj10nidhxaq5f" path="res://Scenes/scoreboard_2.tscn" id="11_qfbj4"]

[sub_resource type="Animation" id="Animation_1sc46"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-128, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Title2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-216, 144)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Title3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-160, 224)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Buttons:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_cnhrj"]
resource_name = "SlideIn"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Vector2(-128, 64), Vector2(160, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Title2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667, 1),
"transitions": PackedFloat32Array(1, 0.5, 2),
"update": 0,
"values": [Vector2(-216, 144), Vector2(-216, 144), Vector2(288, 144)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Title3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.833333, 1.5),
"transitions": PackedFloat32Array(1, 0.5, 2),
"update": 0,
"values": [Vector2(-160, 224), Vector2(-160, 224), Vector2(224, 224)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Buttons:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_436wm"]
_data = {
"RESET": SubResource("Animation_1sc46"),
"SlideIn": SubResource("Animation_cnhrj")
}

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_txtt8")

[node name="StartVideo" parent="." instance=ExtResource("1_gvy58")]
z_index = -5

[node name="Title" type="Node2D" parent="."]

[node name="Title1" type="Sprite2D" parent="Title"]
position = Vector2(-128, 64)
scale = Vector2(4, 4)
texture = ExtResource("1_ggqlj")

[node name="Title2" type="Sprite2D" parent="Title"]
position = Vector2(-216, 144)
scale = Vector2(4, 4)
texture = ExtResource("2_5038a")

[node name="Title3" type="Sprite2D" parent="Title"]
position = Vector2(-160, 224)
scale = Vector2(4, 4)
texture = ExtResource("3_g8fk8")

[node name="TitleAnim" type="AnimationPlayer" parent="Title"]
libraries = {
"": SubResource("AnimationLibrary_436wm")
}
autoplay = "SlideIn"

[node name="Buttons" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 0
offset_left = 64.0
offset_top = 320.0
offset_right = 64.0
offset_bottom = 320.0

[node name="Start" type="Button" parent="Buttons"]
layout_mode = 0
offset_top = -24.0
offset_right = 72.0
offset_bottom = -3.0
scale = Vector2(4, 4)
theme = ExtResource("4_jced4")
text = "Start Game"

[node name="Tutorial" type="Button" parent="Buttons"]
layout_mode = 0
offset_top = 64.0
offset_right = 72.0
offset_bottom = 85.0
scale = Vector2(4, 4)
theme = ExtResource("4_jced4")
text = "Play Tutorial"

[node name="Scoreboard" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 684.0
offset_top = 224.0
offset_right = 756.0
offset_bottom = 245.0
scale = Vector2(4, 4)
theme = ExtResource("4_jced4")
text = "Scoreboard"

[node name="Options" type="Button" parent="Buttons"]
layout_mode = 0
offset_top = 152.0
offset_right = 72.0
offset_bottom = 173.0
scale = Vector2(4, 4)
theme = ExtResource("4_jced4")
text = "Options"

[node name="Quit" type="Button" parent="Buttons"]
layout_mode = 0
offset_top = 240.0
offset_right = 72.0
offset_bottom = 259.0
scale = Vector2(4, 4)
theme = ExtResource("4_jced4")
text = "Quit
"

[node name="OptionsMenu" parent="." instance=ExtResource("7_gsslm")]

[node name="Music" type="Node2D" parent="."]
script = ExtResource("8_jcyxb")

[node name="Metronome" type="Timer" parent="Music"]

[node name="Chords0" parent="Music" instance=ExtResource("9_ngp34")]
play_speed = 0.666
soundfont = "res://Assets/Audio/Instruments/Hybrid_Synthetic_Str.sf2"
bus = &"Arrows"

[node name="Chords1" parent="Music" instance=ExtResource("9_ngp34")]
play_speed = 0.666
soundfont = "res://Assets/Audio/Instruments/Hybrid_Synthetic_Str.sf2"
bus = &"Arrows"

[node name="BackingTrack" type="Node2D" parent="Music" node_paths=PackedStringArray("players")]
script = ExtResource("10_ng7j5")
players = [NodePath("MidiPlayerBass1"), NodePath("MidiPlayerBass2"), NodePath("MidiPlayerChords")]

[node name="MidiPlayerBass1" parent="Music/BackingTrack" instance=ExtResource("9_ngp34")]
file = "res://Assets/Audio/Tracks/snippets02_(bunny)/bg_bass1.MID"
play_speed = 0.666
volume_db = -30.0
soundfont = "res://Assets/Audio/Instruments/LatelyBass 20240409.sf2"
bus = &"Bass"

[node name="MidiPlayerBass2" parent="Music/BackingTrack" instance=ExtResource("9_ngp34")]
file = "res://Assets/Audio/Tracks/snippets02_(bunny)/bg_bass2.MID"
play_speed = 0.666
volume_db = -30.0
soundfont = "res://Assets/Audio/Instruments/LatelyBass 20240409.sf2"
bus = &"Bass"

[node name="MidiPlayerChords" parent="Music/BackingTrack" instance=ExtResource("9_ngp34")]
file = "res://Assets/Audio/Tracks/snippets02_(bunny)/bg_chords.MID"
play_speed = 0.666
volume_db = -30.0
soundfont = "res://Assets/Audio/Instruments/AI-APiano02trans.SF2"
bus = &"Bass"

[node name="MidiPlayerDrums" parent="Music/BackingTrack" instance=ExtResource("9_ngp34")]
file = "res://Assets/Audio/Tracks/snippets02_(bunny)/bg_drums.MID"
playing = true
play_speed = 0.666
volume_db = -19.999
loop = true
soundfont = "res://Assets/Audio/Instruments/Drum Set JD Rockset 5.sf2"
bus = &"Bass"

[node name="scoreboard2" parent="." instance=ExtResource("11_qfbj4")]
visible = false
position = Vector2(640, 64)
scale = Vector2(2, 2)

[connection signal="button_down" from="Buttons/Start" to="." method="_on_start_button_down"]
[connection signal="button_down" from="Buttons/Tutorial" to="." method="_on_tutorial_button_down"]
[connection signal="button_down" from="Buttons/Scoreboard" to="." method="_on_scoreboard_button_down"]
[connection signal="button_down" from="Buttons/Options" to="." method="_on_options_button_down"]
[connection signal="button_down" from="Buttons/Quit" to="." method="_on_quit_button_down"]
[connection signal="timeout" from="Music/Metronome" to="Music" method="_on_metronome_timeout"]
